# app/Http/Controllers/FunctionHackerController.php
@@ -4,6 +4,7 @@ namespace App\Http\Controllers;
 
 use App\Models\CommonUtilitary;
 use App\Http\Controllers\Controller;
+use Faker\Factory;
 use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Auth;
 use Illuminate\Support\Facades\Http;
@@ -117,7 +118,7 @@ class FunctionHackerController extends Controller
      *     path="auth/get-all-domains",
      *     summary="Vérifie si le mot de passe fait partie des mots de passe les plus fréquents",
      *     description="Vérifie si le mot de passe fait partie des mots de passe les plus fréquents",
-     *     tags={"password"},
+     *     tags={"domains"},
      * @OA\Parameter(
      *         name="bearerToken",
      *         in="query",
@@ -251,5 +252,161 @@ class FunctionHackerController extends Controller
         ]);
 
         return $response->getBody();
+    }
+
+    /**
+     * @OA\Post(
+     *     path="auth/crawler-person",
+     *     summary="Vérifie si le mot de passe fait partie des mots de passe les plus fréquents",
+     *     description="Vérifie si le mot de passe fait partie des mots de passe les plus fréquents",
+     *     tags={"that's illegal sir"},
+     * @OA\Parameter(
+     *         name="bearerToken",
+     *         in="query",
+     *         description="Token de connexion de l'utilisateur",
+     *         required=true,
+     *         @OA\Schema(
+     *             type="string",
+     *             format="bearer",
+     *             example="eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJpc3MiOiJodHRwOi8vMTg1Ljk4LjEzOC41Ni9hcGkvYXV0aC9sb2dpbiIsImlhdCI6MTczMDM4OTU1NSwiZXhwIjoxNzMwMzkzMTU1LCJuYmYiOjE3MzAzODk1NTUsImp0aSI6IjNUYmNnWHIxMjNDaGVpVkQiLCJzdWIiOiIxIiwicHJ2IjoiMjNiZDVjODk0OWY2MDBhZGIzOWU3MDFjNDAwODcyZGI3YTU5NzZmNyJ9.do2Iv4GOl28ppLio4W3u1BF30_WoBA5E9nEae7ULwGQ"
+     *         )
+     *     ),
+     *     @OA\Response(
+     *         response=200,
+     *         description="Le mot de passe est utilisé",
+     *         @OA\JsonContent(
+     *             @OA\Property(property="string", type="string", format="string", example="test")
+     *         ),
+     *     )
+     * )
+     */
+    public function crawlerPerson()
+    {
+        if (!Auth::id())
+        {
+            CommonUtilitary::UserNotConnected("crawlerPerson");
+
+            return response()->json(['erreur' => 'Utilisateur non authentifié'], 401);
+        }
+
+        CommonUtilitary::LogUsedFunction(Auth::id(), "crawlerPerson");
+
+        $client = new \GuzzleHttp\Client();
+
+        $name = request()->name;
+
+        $response = $client->request('GET', 'https://serpapi.com/search.json?api_key=' . CommonUtilitary::SERPAPI_KEY . '&engine=google&q=' . $name, [
+            'headers' => [
+              'accept' => 'application/json',
+            ],
+        ]);
+
+        return $response->getBody();
+    }
+
+    /**
+     * @OA\Post(
+     *     path="auth/random-image-generator",
+     *     summary="Vérifie si le mot de passe fait partie des mots de passe les plus fréquents",
+     *     description="Vérifie si le mot de passe fait partie des mots de passe les plus fréquents",
+     *     tags={"generator"},
+     * @OA\Parameter(
+     *         name="bearerToken",
+     *         in="query",
+     *         description="Token de connexion de l'utilisateur",
+     *         required=true,
+     *         @OA\Schema(
+     *             type="string",
+     *             format="bearer",
+     *             example="eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJpc3MiOiJodHRwOi8vMTg1Ljk4LjEzOC41Ni9hcGkvYXV0aC9sb2dpbiIsImlhdCI6MTczMDM4OTU1NSwiZXhwIjoxNzMwMzkzMTU1LCJuYmYiOjE3MzAzODk1NTUsImp0aSI6IjNUYmNnWHIxMjNDaGVpVkQiLCJzdWIiOiIxIiwicHJ2IjoiMjNiZDVjODk0OWY2MDBhZGIzOWU3MDFjNDAwODcyZGI3YTU5NzZmNyJ9.do2Iv4GOl28ppLio4W3u1BF30_WoBA5E9nEae7ULwGQ"
+     *         )
+     *     ),
+     *     @OA\Response(
+     *         response=200,
+     *         description="Le mot de passe est utilisé",
+     *         @OA\JsonContent(
+     *             @OA\Property(property="string", type="string", format="string", example="test")
+     *         ),
+     *     )
+     * )
+     */
+    public function randomImageGenerator()
+    {
+        if (!Auth::id())
+        {
+            CommonUtilitary::UserNotConnected("randomImageGenerator");
+
+            return response()->json(['erreur' => 'Utilisateur non authentifié'], 401);
+        }
+
+        CommonUtilitary::LogUsedFunction(Auth::id(), "randomImageGenerator");
+
+        $client = new \GuzzleHttp\Client();
+
+        $response = $client->request('GET', 'https://random.imagecdn.app/500/300', [
+            'headers' => [
+              'accept' => 'application/json',
+            ],
+        ]);
+
+        $imageContent = $response->getBody()->getContents();
+        $contentType = $response->getHeaderLine('Content-Type');
+    
+        return response($imageContent, 200)->header('Content-Type', $contentType);
+    }
+
+    /**
+     * @OA\Post(
+     *     path="auth/fake-identity-generator",
+     *     summary="Vérifie si le mot de passe fait partie des mots de passe les plus fréquents",
+     *     description="Vérifie si le mot de passe fait partie des mots de passe les plus fréquents",
+     *     tags={"generator"},
+     * @OA\Parameter(
+     *         name="bearerToken",
+     *         in="query",
+     *         description="Token de connexion de l'utilisateur",
+     *         required=true,
+     *         @OA\Schema(
+     *             type="string",
+     *             format="bearer",
+     *             example="eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJpc3MiOiJodHRwOi8vMTg1Ljk4LjEzOC41Ni9hcGkvYXV0aC9sb2dpbiIsImlhdCI6MTczMDM4OTU1NSwiZXhwIjoxNzMwMzkzMTU1LCJuYmYiOjE3MzAzODk1NTUsImp0aSI6IjNUYmNnWHIxMjNDaGVpVkQiLCJzdWIiOiIxIiwicHJ2IjoiMjNiZDVjODk0OWY2MDBhZGIzOWU3MDFjNDAwODcyZGI3YTU5NzZmNyJ9.do2Iv4GOl28ppLio4W3u1BF30_WoBA5E9nEae7ULwGQ"
+     *         )
+     *     ),
+     *     @OA\Response(
+     *         response=200,
+     *         description="Le mot de passe est utilisé",
+     *         @OA\JsonContent(
+     *             @OA\Property(property="string", type="string", format="string", example="test")
+     *         ),
+     *     )
+     * )
+     */
+    public function fakeIdentityGenerator()
+    {
+        if (!Auth::id())
+        {
+            CommonUtilitary::UserNotConnected("fakeIdentityGenerator");
+
+            return response()->json(['erreur' => 'Utilisateur non authentifié'], 401);
+        }
+
+        CommonUtilitary::LogUsedFunction(Auth::id(), "fakeIdentityGenerator");
+
+        $quantity = request()->quantity;
+        $faker = Factory::create();
+
+        $listFaker = [];
+        
+        for ($i = 0; $i < $quantity; $i++) {
+            $name = $faker->name();
+            $email = $faker->email();
+
+            $listFaker[] = [
+                'name' => $name,
+                'email' => $email,
+            ];
+        }
+
+        return response()->json($listFaker);
     }
 }
